Figuring out entrypoint for e2e tests